[package]
name = "torbox-rs"
version = "0.0.1-alpha.1"
edition = "2024"
description = "Rust SDK for the Torbox API"
license = "MIT"
authors = ["CarrotRub"]
repository = "https://github.com/CarrotRub/torbox-rs"
homepage = "https://github.com/CarrotRub/torbox-rs"
keywords = ["sdk", "development-tools"]

[features]
default = []
specta = [
    "dep:specta",
    "torbox-core-rs/specta",
    "torbox-ddl-rs/specta",
    "torbox-torrent-rs/specta",
]

[dependencies]
specta = { version = "2.0.0-rc.22", optional = true, features = [
    "serde",
    "serde_json",
    "derive",
] }
torbox-core-rs = { version = "0.0.1-alpha.1", path = "local-crates/torbox-core-rs", features = [
    "specta",
] }
torbox-ddl-rs = { version = "0.0.1-alpha.1", path = "local-crates/torbox-ddl-rs", features = [
    "specta",
] }
torbox-torrent-rs = { version = "0.0.1-alpha.1", path = "local-crates/torbox-torrent-rs", features = [
    "specta",
] }


[workspace]
members = [
    "local-crates/torbox-core-rs",
    "local-crates/torbox-ddl-rs",
    "local-crates/torbox-torrent-rs",
]

[workspace.dependencies]
reqwest = "0.12.20"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
