[package]
name = "torbox-rs"
version = "0.0.1-alpha.5"
edition = "2024"
description = "Rust SDK for the Torbox API"
license = "MIT"
authors = ["RiadYan"]
repository = "https://github.com/RiadYan/torbox-rs"
homepage = "https://github.com/RiadYan/torbox-rs"
keywords = ["sdk", "development-tools"]

[features]
default = []
specta = [
    "dep:specta",
    "torbox-core-rs/specta",
    "torbox-ddl-rs/specta",
    "torbox-torrent-rs/specta",
]

[dependencies]
specta = { version = "2.0.0-rc.22", optional = true, features = [
    "serde",
    "serde_json",
    "derive",
] }
torbox-core-rs = { path = "local-crates/torbox-core-rs", features = [
    "specta",
] }
torbox-ddl-rs = {  path = "local-crates/torbox-ddl-rs", features = [
    "specta",
] }
torbox-torrent-rs = {  path = "local-crates/torbox-torrent-rs", features = [
    "specta",
] }
torbox-general-rs = { path = "local-crates/torbox-general-rs", features = [
    "specta",
] }
torbox-user-rs = {  path = "local-crates/torbox-user-rs", features = [
    "specta",
] }
torbox-notifications-rs = {  path = "local-crates/torbox-notifications-rs", features = [
    "specta",
] }

[workspace]
members = [
    "local-crates/torbox-core-rs",
    "local-crates/torbox-ddl-rs",
    "local-crates/torbox-general-rs",
    "local-crates/torbox-notifications-rs",
    "local-crates/torbox-torrent-rs",
    "local-crates/torbox-user-rs",
]

[workspace.dependencies]
reqwest = "0.12.20"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
