[package]
name = "torbox-core-rs"
version = "0.0.1-alpha.2"
edition = "2024"
description = "Rust SDK Core for the torbox API"
license = "MIT"
authors = ["CarrotRub"]
repository = "https://github.com/CarrotRub/torbox-rs"
homepage = "https://github.com/CarrotRub/torbox-rs"
keywords = ["sdk", "development-tools"]

[features]
default = []
specta = ["dep:specta"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
tokio = { version = "1.45.1", features = ["macros"] }
specta = { version = "2.0.0-rc.22", optional = true, features = [
    "serde",
    "serde_json",
    "derive",
    "chrono",
] }

reqwest = { version = "0.12.20", features = ["json", "multipart"] }
thiserror = "2.0.12"
async-trait = "0.1.88"
