[package]
name = "torbox-ddl-rs"
version = "0.0.1-alpha.5"
edition = "2024"
description = "Rust SDK DDL for the Torbox API"
license = "MIT"
authors = ["RiadYan"]
repository = "https://github.com/RiadYan/torbox-rs"
homepage = "https://github.com/RiadYan/torbox-rs"
keywords = ["sdk", "development-tools"]

[features]
default = []
specta = ["dep:specta", "torbox-core-rs/specta"]

[package.metadata.workspaces]
independent = true

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
specta = { version = "2.0.0-rc.22", optional = true, features = [
    "serde",
    "serde_json",
    "derive",
    "chrono",
] }
torbox-core-rs = {  path = "../torbox-core-rs", features = [
    "specta",
] }
reqwest = { version = "0.12.20", features = ["json", "stream"] }
