[package]
name = "torbox-notifications-rs"
version = "0.0.1-alpha.2"
edition = "2024"
description = "Rust SDK Torrent for the Torbox API"
license = "MIT"
authors = ["RiadYan"]
repository = "https://github.com/RiadYan/torbox-rs"
homepage = "https://github.com/RiadYan/torbox-rs"
keywords = ["sdk", "development-tools"]

[dev-dependencies]
tokio = { version = "1.45.1", features = ["macros"] }
dotenvy = "0.15.7"

[package.metadata.workspaces]
independent = true

[dependencies]
torbox-core-rs = { version = "0.0.1-alpha.3", path = "../torbox-core-rs", features = [
    "specta",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
specta = { version = "2.0.0-rc.22", optional = true, features = [
    "serde",
    "serde_json",
    "derive",
    "chrono",
] }
reqwest = { version = "0.12.20", features = ["json", "stream"] }
